# cameras

./: .dockerignore  .gitignore  Dockerfile  bot.py  cache.py  detection.py  docker-compose.yml  evo.py  pyproject.toml  requirements.txt  server.py
etalon/: parking_grid_config_2784.json  parking_grid_config_2785.json  parking_grid_config_2797.json  parking_grid_config_2802.json  parking_grid_config_2803.json  parking_grid_config_2813.json
static/: index.html
