[project]
name = "telegram-camera-bot"
version = "1.0.0"
description = "Telegram bot for camera monitoring"
requires-python = ">=3.11"

dependencies = [
#    "python-telegram-bot==20.7",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
    "jwt==1.4.0",
    "requests==2.31.0",
    "fastapi[standard]==0.127.0",
    "apscheduler",
    'redis',
]
[project.optional-dependencies]
dev-libs = [
    "ultralytics==8.3.235",
]
